# PPG_to_motion

./: .gitignore  LICENSE  pyproject.toml
notebooks/: validate.ipynb
src/ppg_to_motion/datasets/: builder.py  make_splits.py
src/ppg_to_motion/io/: __init__.py  ieee.py  ppg_dalia.py  vsm_freeliving.py  vsm_preop.py
src/ppg_to_motion/model/: tune_dinov3.py  tune_dinov3_MLP.py  tune_dinov3_transformer.py
src/ppg_to_motion/preprocessing/: segment.py  signal_image_2d.py
