[project]
name = "ppg-to-motion"
version = "0.1.0"
description = "Dataset builder and preprocessing pipeline for PPG-DaLiA and VSM Pre-OP datasets"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "tqdm>=4.66",
    "torch>=2.1",
    "datasets>=3.0",
    "pyarrow>=12.0.0,<24",
    "openpyxl>=3.1",
    "transformers>=4.40",
    "peft>=0.10",
]

[project.optional-dependencies]
notebook = [
    "matplotlib>=3.8",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
